--- a/mulehalcyon/pom.xml
+++ b/mulehalcyon/pom.xml
@@ -27,5 +27,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
   </dependencies>
 </project>
